# Embedded-Car

./: White Box Testing.docx  sampledemo.c
drivers/encoder/: encoder.c  encoder.h
drivers/integrate blackbox testing/: integrate.c
drivers/ir_leftandright/: ir_leftandright.c  ir_leftandright.h
drivers/irline/: irline1.c
drivers/magnometer/: magnometer.c  magnometer.h
drivers/motor/: motor.c  motor.h
drivers/picoserver/main/: CMakeLists.txt  main.c  main.h  ssi.h
drivers/picoserver/main/html_files/: index.shtml
drivers/project1/: CMakeLists.txt
drivers/project1/encoder/: CMakeLists.txt  encoder.c  encoder.h
drivers/project1/integrate/: CMakeLists.txt
drivers/project1/ir_leftandright/: CMakeLists.txt  ir_leftandright.c
drivers/project1/irline/: CMakeLists.txt  irline.c
drivers/project1/magnometer/: CMakeLists.txt  magnometer.c
drivers/project1/motor/: CMakeLists.txt
drivers/project1/ultrasonic/: CMakeLists.txt  ultrasonic.c
drivers/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
drivers/wifi/: CMakeLists.txt  wifi.c
picoserver/main/: CMakeLists.txt  htmldata.c  main.h
